trunk/Archive2/18/2d893df49bd5f1/output
+ g++-4.8 -std=c++1y -O3 -Wall -pedantic -Wextra -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:13:21: error: 'A::A(int)' is protected
         using Base::Base;
                     ^
main.cpp:19:11: error: within this context
     A a(42);
           ^
