trunk/Archive2/18/2d893df49bd5f1/main.cpp
#include <iostream>

using namespace std;

class Base {
    protected:
        Base(int i): i(i) { }   // This won't compile
        int i;
};

class A: public Base {
    public:
        using Base::Base;
        void say() { cout << "I am A and have a value of " << i << endl; }
};

int main(){
    cout << "I'm creating A." << endl;
    A a(42);
    a.say();
}
